master_deploy | create rota footer
